DumpController Swagger
